--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -40,30 +40,50 @@ b, strong
 
 // Custom styles
 
+.grid
+	display: grid
+
 .header
-	background-color: #FEFEFE
+	
+	background-color: #fff
+	outline: 1px solid black
+
+.wrapper
+	max-width: 1200px
 	height: 94px
-	border: 1px solid red
-	padding: 28px 0
-	&-logo, &-navbar
-		// border: 1px solid red
-		padding: 0
-	.sm
-		li
-			display: inline-block
-			a
-				text-transform: uppercase
-				text-decoration: none
-				color: $text
-				font-size: 13.5px
-				padding: 10px 19px
-				border-radius: 3px
-				transition: background-color .3s ease, color .3s ease
-				&:hover
-					background-color: $accent-blue
-					color: #fff
-			&.active a
-				background-color: $accent-orange
+	padding: 0 10px
+	margin: auto
+	grid-template-columns: 1fr auto
+	align-content: center
+
+.header-logo
+	align-content: center
+
+.main-menu
+	padding: 0
+	margin: 0
+	list-style-type: none
+	grid-template-columns: repeat(7, auto)
+	grid-gap: 8px
+	align-content: center
+	li
+		display: block
+		a
+			font-family: lato-myproject, sans-serif
+			font-size: 13.5px
+			text-transform: uppercase
+			text-decoration: none
+			color: $text
+			font-size: 13.5px
+			padding: 10px 20px 8px
+			border-radius: 2px
+			transition: background-color .3s ease, color .3s ease
+			&:hover
+				background-color: $accent-blue
+				color: #ffffff
+		&.active a
+			background-color: $accent-orange
+			color: #ffffff
 
 
 
