--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -3,3 +3,5 @@
 +font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
 +font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
 +font-face("lato-myproject", "../fonts/LatoRegular/LatoRegular")
++font-face("gotham-myproject", "../fonts/GothamProRegular/GothamProRegular")
++font-face("gotham-myproject", "../fonts/GothamProBlack/GothamProBlack", 800)
