Made request form

--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,7 +1,7 @@
 $default-font: "opensans-myproject", sans-serif
 $accent: orange
-$accent-orange: #FEBA54
-$accent-blue: #6B9AC5
+$accent-orange: #ffbb42
+$accent-blue: #709dca
 $text: #7b7b7b
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
