--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -136,6 +136,8 @@ section
 		grid-template-columns: repeat(3, 1fr) auto
 		grid-gap: 8px
 
+i.fas
+	color: #000
 
 
 @import "media" // Always at the end
