Created services section and began to style

--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -3,6 +3,7 @@ $accent: orange
 $accent-orange: #ffbb42
 $accent-blue: #709dca
 $text: #7b7b7b
+$h-text: #394C50
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 
