--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -3,5 +3,6 @@
 +font-face("opensans-myproject", "../fonts/OpenSansRegular/OpenSansRegular")
 +font-face("opensans-myproject", "../fonts/OpenSansBold/OpenSansBold", bold)
 +font-face("lato-myproject", "../fonts/LatoRegular/LatoRegular")
++font-face("lato-myproject", "../fonts/LatoBold/LatoBold", bold)
 +font-face("gotham-myproject", "../fonts/GothamProRegular/GothamProRegular")
 +font-face("gotham-myproject", "../fonts/GothamProBlack/GothamProBlack", 800)
