Finished Services section

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -196,15 +196,24 @@ section
 		font-family: lato-myproject, sans-serif
 		.svg-inline--fa
 			float: left
+			font-size: 50px
+			transition: color .25s ease
+		a
+			text-decoration: none
+			color: $h-text
+			&:hover
+				.svg-inline--fa
+					color: $accent-orange
+
 		h3
 			margin-bottom: 9px
-			margin-left: 50px
+			margin-left: 76px
 			text-transform: uppercase
 			font-size: 16px
 			font-weight: bold
 			color: $h-text
 		p
-			margin-left: 50px
+			margin-left: 76px
 			text-align: left
 			line-height: 22px
 			font-size: 13px
