--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -252,7 +252,33 @@ section
 				transition: background-color 0.25s ease
 				&:hover
 					background-color: $accent-blue
+	
+// Price section
 
+.price
+	background-color: #e7edf3
+	h2, p
+		color: $h-text		
+	&-content
+		grid-template-columns: 1fr 1fr 1fr
+		align-content: center
+		.item
+			padding: 100px 30px
+			background-color: #fff
+			border: 1px solid #ccd5df
+			border-radius: 3px
+			text-align: center
+			h3
+				text-transform: uppercase
+			p
+				text-transform: uppercase
+			.button
+				display: inline-block
+		.item-premium
+			padding: 140px 30px
+			background-color: $accent-blue
+			border: none
+			
 
 			
 
