Finished Price section

--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -4,5 +4,6 @@
 +font-face("opensans-myproject", "../fonts/OpenSansBold/OpenSansBold", bold)
 +font-face("lato-myproject", "../fonts/LatoRegular/LatoRegular")
 +font-face("lato-myproject", "../fonts/LatoBold/LatoBold", bold)
++font-face("lato-myproject", "../fonts/LatoLight/LatoLight", 200)
 +font-face("gotham-myproject", "../fonts/GothamProRegular/GothamProRegular")
 +font-face("gotham-myproject", "../fonts/GothamProBlack/GothamProBlack", 800)
