Began Clients section

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -357,6 +357,11 @@ section
 			padding: 10px 27px
 			text-decoration: none
 
+// Clients section
+
+.clients
+	background-color: $accent-orange
+
 
 
 
