Finished Clients section

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -361,7 +361,48 @@ section
 
 .clients
 	background-color: $accent-orange
-
+	padding-top: 140px
+	padding-bottom: 160px
+	h2, p
+		color: #fff
+	p
+		margin-bottom: 54px
+	&-content
+		grid-template-columns: 1fr 1fr
+		grid-row-gap: 20px
+		grid-column-gap: 36px
+		.item
+			position: relative
+			padding: 42px 28px
+			background-color: #fff
+			border-radius: 3px
+			img
+				float: left
+			.svg-inline--fa
+				font-size: 10px
+				position: absolute
+				color: #7A7979
+				&.fa-quote-left
+					left: 160px
+				&.fa-quote-right
+					bottom: 85px
+					right: 60px
+			p
+				margin-bottom: 0
+				padding-left: 154px
+				font-family: opensans-myproject, sans-serif
+				font-size: 13px
+				text-align: 22px
+				color: #7A7979
+				text-align: left
+			p.author
+				margin-top: 18px
+				text-transform: uppercase
+				font-family: lato-myproject, sans-serif
+				font-size: 14px
+				color: #adbabe
+				span
+					color: #f7803a
 
 
 
