Createde Subscribe form

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -403,7 +403,22 @@ section
 				color: #adbabe
 				span
 					color: #f7803a
+	
+// Newsletter section
 
+.newsletter
+	padding-top: 153px
+	padding-bottom: 160px
+	h2, p
+		color: $h-text
+	p
+		margin-bottom: 34px
+	.subscribe-form
+		padding: 0 116px
+		grid-template-columns: 2fr 3fr auto
+		grid-gap: 8px
+		input
+			border: 1px solid #cbcbcb
 
 
 
