--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -419,8 +419,37 @@ section
 		grid-gap: 8px
 		input
 			border: 1px solid #cbcbcb
-
-
+	.content
+		max-width: 1102px
+		margin: 53px auto 0 auto
+		padding-top: 40px
+		padding-bottom: 162px
+		background-image: url(../img/newsletter-bg.png)
+		background-size: cover
+		.contacts
+			width: 150px
+			height: 150px
+			padding: 65px
+			margin: auto
+			border-radius: 50%
+			text-align: center
+			background-color: #394b50
+			h3
+				margin-bottom: 10px
+				text-transform: uppercase
+				color: #fff
+				font-size: 14px
+				font-weight: normal
+			p
+				margin-bottom: 5px
+				color: #aeb7ba
+				font-size: 12px
+				a
+					text-decoration: none
+					color: $accent-orange
+		.newsletter-logo
+			width: 50px
+			margin: 18px auto 0 auto
 
 
 
